--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<img class="popcorn" src="images/popcorn.png" alt="popcorn">
 		<img class="haha" src="images/haha.png" alt="haha">
 		<img class="screen" src="images/home.jpg" alt="home">	
-		<img class="screen run" src="images/run.png" alt="run">	
+		<img class="run" src="images/run.png" alt="run">	
 
 	</div>
 
